<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7.0"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:id="@+id/textView"
            android:text="@string/main_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_weight="0.72"
            android:textSize="30sp"
            android:textColor="@android:color/white" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/popular_movies"
            android:id="@+id/popular_movies_btn"
            android:onClick= "onButtonClicked" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/stock_hawk"
            android:id="@+id/stock_hawk_btn"
            android:onClick= "onButtonClicked" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/build_it_bigger"
            android:id="@+id/build_it_bigger_btn"
            android:onClick= "onButtonClicked" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/make_your_app_material"
            android:id="@+id/material_app_btn"
            android:onClick= "onButtonClicked" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/go_ubiquitous"
            android:id="@+id/go_ubiquitous_btn"
            android:onClick= "onButtonClicked" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/capstone"
            android:id="@+id/caspstone_btn"
            android:onClick= "onButtonClicked"
            android:layout_marginBottom="0dp"/>
    </LinearLayout>
</ScrollView>
